...
                                <connections>
                                    <outlet property="delegate" destination="cmj-gR-B0A" id="GBx-ue-qKY"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YcE-Mk-xfP" userLabel="Bacward Button">
                                <rect key="frame" x="8" y="52" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Exo-LB-2qu"/>
                                    <constraint firstAttribute="width" constant="48" id="INX-4W-TOb"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backwardButton"/>
...
                                <rect key="frame" x="0.0" y="100" width="414" height="4"/>
                                <color key="tintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="HzA-uV-C1V"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="ftI-AH-RsG" firstAttribute="leading" secondItem="HzA-uV-C1V" secondAttribute="leading" constant="8" id="18W-b1-fpD"/>
                            <constraint firstItem="uK8-S6-b9y" firstAttribute="bottom" secondItem="wzF-gD-nmE" secondAttribute="bottom" id="4NN-Oj-xeN"/>
                            <constraint firstItem="ftI-AH-RsG" firstAttribute="top" secondItem="HzA-uV-C1V" secondAttribute="top" constant="8" id="BFp-NR-pmt"/>
                            <constraint firstItem="D1S-TP-78P" firstAttribute="top" secondItem="ftI-AH-RsG" secondAttribute="bottom" id="Kf8-4l-gHY"/>
                            <constraint firstItem="D1S-TP-78P" firstAttribute="leading" secondItem="HzA-uV-C1V" secondAttribute="leading" id="Mfk-lb-Tqc"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="9nu-PN-zoy">
                                <rect key="frame" x="177" y="445" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ADc-Da-hnn" userLabel="authActionButton">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="h1E-FS-VJb"/>
                                    <constraint firstAttribute="height" constant="48" id="mnh-Lz-iOm"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
