...
        )
        logoutButton.heightAnchor.constraint(equalToConstant: 44).isActive = true
        logoutButton.widthAnchor.constraint(equalToConstant: 44).isActive = true
        logoutButton.tintColor = .ypRed
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        
        logoutButton.accessibilityIdentifier = "logout button"
        return logoutButton
    }()
    
    lazy var nameLabel: UILabel = {
        let label = createLabel(size: 23, weight: .bold, text: "Name", color: .ypWhite)
        label.accessibilityIdentifier = "textName"
...
